--- a/styles/style.css
+++ b/styles/style.css
@@ -1,9 +1,13 @@
 :root {
     --white: #ffffff;
     --black: #212121;
-    --yellow: #FFC107;
+    --yellow: #efc340;
     --secondary: #35a4b0;
     --gray: #757575;
+}
+
+h1, p {
+    color: var(--white)
 }
 
 header {
@@ -52,7 +56,7 @@ footer {
     grid-template-columns: 350px;
     padding: 0.5rem;
     border-radius: 10px;
-    margin: 35px auto;
+    margin: 40px auto;
     text-align: center;
     justify-content: center;
     -webkit-box-shadow: -18px -12px 38px -9px rgba(117,117,117,0.72);
@@ -60,5 +64,8 @@ footer {
     box-shadow: -18px -12px 38px -9px rgba(117,117,117,0.72);
 }
 
+#lastmod {
+    color: var(--yellow);
+}
 
 
