--- a/styles/small.css
+++ b/styles/small.css
@@ -1,7 +1,7 @@
 :root {
     --black: #111010;
-    --green: #304a38;
-    --secondary: #e58875;
+    --green: #030946;
+    --secondary: #18b2c0;
     --gray: #757575;
 }
 
