--- a/lesson2/css/large.css
+++ b/lesson2/css/large.css
@@ -16,8 +16,8 @@
     }
     
     .content {
-        text-align: justify;
-        line-height: 1.5;
+        text-align: center;
+        line-height: 2;
         padding: 0 5%;
     }
 
