--- a/lesson2/css/small.css
+++ b/lesson2/css/small.css
@@ -30,8 +30,8 @@ header {
 }
 
 .content {
-    text-align: justify;
-    line-height: 1.5;
+    text-align: center;
+    line-height: 2;
     padding: 0 5%;
 }
 
