--- a/lesson2/css/small.css
+++ b/lesson2/css/small.css
@@ -44,7 +44,8 @@ h3 {
 }
 
 h4 {
-    color: var(--aqua);   
+    color: var(--aqua);
+    font-size: 25px;   
 }
 
 .picture {
@@ -52,7 +53,8 @@ h4 {
 }
 
 a {
-    color: var(--aqua)
+    color: var(--aqua);
+    font-size: 15px;
 }
 
 footer  {
