--- a/lesson2/css/small.css
+++ b/lesson2/css/small.css
@@ -35,12 +35,16 @@ header {
     padding: 0 5%;
 }
 
-h3 {
+.subtitle__main {
     background-color: var(--secondary);
-    text-align: left;
+    text-align: center;
     margin: 0;
     padding: 10px;
     color: var(--blue);
+}
+
+#link {
+    font-size: 1.3rem;
 }
 
 h4 {
