--- a/chamber/css/small.css
+++ b/chamber/css/small.css
@@ -1,7 +1,7 @@
 :root {
   --primary: #f1f5f5;
   --darkprimary: #04423d;
-  --secondary: #76dede;
+  --secondary: #44e6e6;
   --darksecondary: #0D3B66;
   --gray: #949494;
 
