--- a/chamber/css/large.css
+++ b/chamber/css/large.css
@@ -22,6 +22,26 @@
 		max-width: 1000px;
 	}
 
+
+	h2 {
+		grid-column: 2/3;
+		grid-row: 1/3;
+		position: relative;
+		color: var(--darksecondary);
+		background-color: var(--secondary);
+		width: fit-content;
+		height: fit-content;
+		margin: 0 0 0.5rem;
+		position: absolute;
+		top: 15px;
+		right: 30px;
+		background: radial-gradient(rgb(252, 252, 252), #F4B552);
+		border: 1px solid rgba(0,0,0,.1);
+		padding: 1.5rem;
+		box-shadow: 0 0 30px #333;
+		opacity: 0.8;
+	  }
+
 	.event {
 		grid-row: 1/2;
 		grid-column: 1/2;
