--- a/chamber/css/medium.css
+++ b/chamber/css/medium.css
@@ -15,8 +15,22 @@
   }
 
   h2 {
-      font-size: 2em;
-      padding: 1.5em;
+    grid-column: 2/3;
+    grid-row: 1/3;
+    position: relative;
+    color: var(--darksecondary);
+    background-color: var(--secondary);
+    width: fit-content;
+    height: fit-content;
+    margin: 0 0 0.5rem;
+    position: absolute;
+    top: 15px;
+    right: 35px;
+    background: radial-gradient(rgb(252, 252, 252), #F4B552);
+    border: 1px solid rgba(0,0,0,.1);
+    padding: 1.5rem;
+    box-shadow: 0 0 30px #333;
+    opacity: 0.8;
   }
 
   .home-main {
@@ -29,6 +43,8 @@
   .hero{
       grid-column: 1/4;
       grid-row: 1/2;
+      position: relative;
+      max-width: 700px;
   }
 
   .news {
@@ -141,49 +157,14 @@
       justify-items: center;
   }
 
-  .join-main form fieldset, .join-main .submitBtn {
-      max-width: 25rem;
-  }
-
-  .thankyou-main {
-  grid: 1fr / 1fr 1fr;
-      grid-row-gap: 0;
-
-}
-
-.thankyou-main h2 {
-  align-self: end;
-  font-size: x-large;
-      margin-top: .5em;
-}
-
-.thankyou-main p {
-  grid-column: 2/3;
-      margin-left: .5em;
-}
-
-.thankyou-main img {
-  grid-row: 1/3;
-  max-height: 450px;
-      justify-self: end;
-      padding-right: .5em;
-}
-
 
   .list-view section {
       grid-template-columns: repeat(4, 1fr);
   }
 
-  .card-view {
-      grid-template-columns: repeat(2, 1fr);
-  }
 
   .contact-main form {
       grid-column: 1/3;
-  }
-
-  .contact-main form fieldset, .contact-main form .submitBtn {
-      max-width: 25rem;
   }
 
   .information {
