--- a/chamber/css/small.css
+++ b/chamber/css/small.css
@@ -1,10 +1,9 @@
 :root {
-  --primary: #f1f5f5;
-  --darkprimary: #04423d;
-  --secondary: #44e6e6;
-  --darksecondary: #0D3B66;
-  --gray: #949494;
-
+  --primary: #B6AD90;
+  --darkprimary: #3F220A;
+  --secondary: #7c9760;
+  --darksecondary: #333D29;
+  --gray: #C2C5AA;
 
   --mainfont: 'Staaliches', cursive;
 }
@@ -15,9 +14,9 @@ body {
   background-color: var(--primary);
 }
 
-#banner {
+.banner {
   display:none;
-  background-color: var(--darkprimary);
+  background-color: var(--secondary);
   text-align: center;
   padding: .5rem;
 }
@@ -52,7 +51,10 @@ button {
   font-size: 2em;
 }
 
-button:hover {cursor: pointer;}
+button:hover {
+  cursor: pointer;
+
+} 
 
 .extra {display: none;}
 
@@ -68,9 +70,9 @@ nav {
 margin: 0 auto;
 max-width: 760px;
 }
+
 .navigation {
-list-style: none;
-padding: 0;
+  list-style: none;
   margin: 0;
   padding: .5rem;
   position: absolute;
@@ -87,12 +89,14 @@ padding: 0;
 display: block;
 padding: 0.75rem 2vw;
 text-decoration: none;
-color: var(--darksecondary);
+color: var(--darkprimary);
 transition: 0.2s;
-  font-size: x-large;
+font-size: x-large;
+
 }
 
-nav ul li.active a, .navigation a:hover {background-color: var(--primary);}
+nav ul li.active a, .navigation a:hover {background-color: var(--gray);
+  }
 
 .hidden {display: none;}
 
@@ -103,14 +107,17 @@ nav ul li.active a, .navigation a:hover {background-color: var(--primary);}
   grid-template-columns: 1fr 1fr;
 }
 
-.responsive li {display: block;}
+.responsive li {display: block;
+   
+}
 
 
 ul.responsive {
   z-index: 1;
 }
 
-.responsive a {background-color: var(--darkprimary);
+.responsive a {background-color: var(--gray);
+  color: var(--darkprimary);
 }
 
 /*************
@@ -205,6 +212,14 @@ footer h3 {
   text-align: left;
 }
 
+.spotlight div p {
+  color: var(--darkprimary);
+  font-weight: normal;
+  padding-left: .5em;
+  padding-right: .5em;
+}
+
+
 .spotlight img {
   width: 150px;
   min-height: 100px;
@@ -226,31 +241,42 @@ footer h3 {
 .hero {
   display: grid;
   grid: 1fr 1fr / 1fr 1fr;
+  position: relative;
 }
 
 .hero .hero-photo {
-  grid-column: 1/3;
+  grid-column: 2/3;
   grid-row: 1/3;
-  z-index: -1;
-  margin: 0;
+  margin: 10px;
+  position: relative; 
+  min-width: 400px; 
 }
 
 .hero-photo img {
-  width: 100%;
+  width: 95%;
   height: 100%;
 }
 
-.hero h2 {
-  grid-column: 1/3;
-  grid-row: 1/2;
-  padding: 1em;
+h2 {
+  grid-column: 2/3;
+  grid-row: 1/3;
+  position: relative;
   color: var(--darksecondary);
   background-color: var(--secondary);
-  margin: 0;
   width: fit-content;
   height: fit-content;
-  font-size: 2em;
+  margin: 0 0 0.5rem;
+  position: absolute;
+	top: 25px;
+	right: 30px;
+	background: radial-gradient(rgb(252, 252, 252), #F4B552);
+	border: 1px solid rgba(0,0,0,.1);
+	padding: 1.5rem;
+	box-shadow: 0 0 30px #333;
+	opacity: 0.8;
 }
+
+
 
 #current-temp {
   padding-left: 20px;
