--- a/chamber/css/small.css
+++ b/chamber/css/small.css
@@ -1,6 +1,6 @@
 :root {
   --primary: #B6AD90;
-  --darkprimary: #391b02;
+  --darkprimary: #281301;
   --secondary: #7c9760;
   --darksecondary: #333D29;
   --gray: #C2C5AA;
