--- a/chamber/css/small.css
+++ b/chamber/css/small.css
@@ -253,7 +253,7 @@ footer h3 {
 }
 
 .hero-photo img {
-  width: 95%;
+  width: 100%;
   height: 100%;
 }
 
@@ -263,10 +263,9 @@ h2 {
   position: relative;
   color: var(--darksecondary);
   background-color: var(--secondary);
-  width: fit-content;
-  height: fit-content;
+  width: 50%;
+  height: 50% ;
   margin: 0 0 0.5rem;
-  position: absolute;
 	top: 25px;
 	right: 30px;
 	background: radial-gradient(rgb(252, 252, 252), #F4B552);
@@ -276,8 +275,6 @@ h2 {
 	opacity: 0.8;
 }
 
-
-
 #current-temp {
   padding-left: 20px;
 }
@@ -285,4 +282,10 @@ h2 {
 .news h3 {
   padding: 1em 1em .5em 1em;
   background-color: var(--secondary);
+}
+
+.weather, p {
+  color: var(--darkprimary);
+  font-family: var(--mainfont);
+  
 }
