--- a/chamber/css/large.css
+++ b/chamber/css/large.css
@@ -70,7 +70,7 @@
 	.hero {
 		grid-row: 1/3;
 		grid-column: 2/3;
-		min-width: 400px;
+		min-width: 600px;
 	}
 
 	.hero h2 {
@@ -78,10 +78,19 @@
 		font-size: 2em;
 	}
 
-	.hero button {
-		margin-bottom: 1em;
-		margin-right: 1em;
-	}
+	.hero .hero-photo {
+		grid-column: 2/3;
+		grid-row: 1/3;
+		margin: 10px;
+		position: relative; 
+		min-width: 600px; 
+	  }
+
+	.hero-photo img {
+		width: 97%;
+		height: 100%;
+	
+	  }
 
 	.news {
 		grid-row: 3/4;
