--- a/chamber/css/medium.css
+++ b/chamber/css/medium.css
@@ -44,12 +44,21 @@
       grid-column: 1/4;
       grid-row: 1/2;
       position: relative;
-      max-width: 900px;
+      max-width: 400px;
+  }
+
+  .hero .hero-photo {
+    grid-column: 2/3;
+    grid-row: 1/3;
+    margin: 10px;
+    position: relative; 
+    min-width: 400px; 
   }
 
   .hero-photo img {
-    width: 95%;
+    width: 60%;
     height: 100%;
+
   }
 
   .news {
