--- a/chamber/css/small.css
+++ b/chamber/css/small.css
@@ -242,6 +242,7 @@ footer h3 {
   display: grid;
   grid: 1fr 1fr / 1fr 1fr;
   position: relative;
+  min-width: 200px;
 }
 
 .hero .hero-photo {
@@ -249,12 +250,13 @@ footer h3 {
   grid-row: 1/3;
   margin: 10px;
   position: relative; 
-  min-width: 400px; 
+  min-width: 200px; 
 }
 
 .hero-photo img {
-  width: 100%;
+  width: 50%;
   height: 100%;
+  float: left;
 }
 
 h2 {
