--- a/chamber/css/large.css
+++ b/chamber/css/large.css
@@ -1,4 +1,4 @@
-@media only screen and (min-width: 830px) {
+@media only screen and (min-width: 1200px) {
 	header{
         font-size: 1rem;
 		grid-template-columns: 1fr 2fr 1fr;
@@ -8,6 +8,17 @@
 		grid-column: 3/4;
 		grid-row: 1/2;
 	}
+
+	
+	.banner {
+		grid-row: 3/3;
+		grid-column: 1/5;
+		text-align: center;
+	}
+
+	.extra {display: initial;}
+
+	.icon {width: 40px;}
 
 	.navigation a {
 		font-size: medium;
@@ -20,6 +31,12 @@
 	main {
 		margin: .5em auto;
 		max-width: 1000px;
+	}
+
+	
+	h1 {
+		padding-left: 5px;
+		justify-self: start;
 	}
 
 
@@ -70,7 +87,9 @@
 	.hero {
 		grid-row: 1/3;
 		grid-column: 2/3;
-		min-width: 600px;
+		min-width: 670px;
+		padding: 1rem;
+		margin: 10px;
 	}
 
 	.hero h2 {
@@ -81,17 +100,19 @@
 	.hero .hero-photo {
 		grid-column: 2/3;
 		grid-row: 1/3;
-		margin: 10px;
-		position: relative; 
-		min-width: 600px; 
+		margin: 15px 15px;
+		min-width: 620px;
+
 	  }
 
 	.hero-photo img {
-		width: 97%;
-		height: 100%;
-		float: leftf;
-	
+		width: 100%;
+		height: 105%;	
 	  }
+
+	.home-main section:not(:first-child){
+		padding: 0.5em;
+	}
 
 	.news {
 		grid-row: 3/4;
@@ -99,10 +120,10 @@
 	}
 
 	.spotlight {
+		display: grid;
 		grid-row: 1/4;
-		grid-column: 3/4;
-		grid-template-rows: minmax(min-content, max-content);
-		grid-template-columns: 1fr;
+		grid-template-columns: minmax(min-content, max-content);
+		
 	}
 
 	.spotlight h3 {
@@ -114,7 +135,7 @@
 	}
 
 	.spotlight img {
-		width: 100px;
+		width: 150px;
 		margin-top: .75rem;
 		text-align: center;
 	}
