--- a/chamber/css/medium.css
+++ b/chamber/css/medium.css
@@ -1,4 +1,4 @@
-@media only screen and (min-width: 34em) {
+@media only screen and (min-width: 700px) {
   header {font-size: .7em;}
 
   .logo {width: 75px;}
@@ -8,11 +8,25 @@
       font-size: .75em;
       font-weight: 500;
   }
+    
+  .banner {
+    grid-row: 3/3;
+    grid-column: 2/4;
+    text-align: center;
+   }
+  
+   .icon {width: 30px;}
 
   main {
       font-size: 1em;
       margin: 0 auto 1em auto;
   }
+
+  
+    h1 {
+        padding-left: 5px;
+        justify-self: start;
+    }
 
   h2 {
     grid-column: 2/3;
@@ -41,25 +55,26 @@
   }
 
   .hero{
-      grid-column: 2/4;
+      display: grid;
+      grid-column: 1/4;
       grid-row: 1/2;
-      position: relative;
-      max-width: 500px;
-      
+      max-width:700px;
+      margin:10px;
+          
   }
 
   .hero .hero-photo {
     grid-column: 2/3;
     grid-row: 1/3;
     margin: 10px;
-    position: relative; 
-    min-width: 400px; 
+    min-width: 250px; 
+    padding: 1rem;
   }
 
   .hero-photo img {
-    
+    width: 100%;
     height: 100%;
-
+    float: left;
   }
 
   .news {
@@ -81,15 +96,6 @@
       font-weight: normal;
   }
 
-  .event {
-      grid-column: 1/3;
-      grid-row: 5/6;
-  }
-
-  .weather {
-      grid-column: 3/4;
-      grid-row: 5/6;
-  }
 
   .weather h4 {
       font-size: large;
@@ -108,9 +114,6 @@
   }
 
   .spotlight {
-      grid-column: 1/4;
-      grid-row: 3/4;
-      grid-template-columns: 1fr 1fr;
       grid-column-gap: 5px;
   }
 
