--- a/chamber/css/small.css
+++ b/chamber/css/small.css
@@ -5,19 +5,20 @@
   --darksecondary: #333D29;
   --gray: #C2C5AA;
 
-  --mainfont: 'Staaliches', cursive;
+  --mainfont: Open sans-serif;
 }
 
 body {
   font-family: var(--mainfont);
   font-size: 16px;
   background-color: var(--primary);
+  margin: auto;
 }
 
 .banner {
-  grid-row: 3/3;
+  grid-row: 3/4;
   grid-column: 1/5;
-  text-align: center;
+  justify-content: center;
 }
 
 
@@ -41,6 +42,7 @@ header {
 h1 {
   padding-left: 5px;
   justify-self: start;
+  
 }
 
 button {
@@ -54,7 +56,8 @@ button:hover {
   cursor: pointer;
 } 
 
-.extra {display: none;}
+.extra {display: initial;
+  text-align: justify;}
 
 .date {
   grid-row: 2/3;
@@ -175,10 +178,6 @@ footer h3 {
   Home
 *************/
 
-.home-main section:not(:first-child){
-  padding: .5em;
-}
-
 .home-main section h3 {
   color: var(--darksecondary);
   font-weight: bold;
@@ -196,6 +195,7 @@ footer h3 {
   grid-template-columns: 1fr;
   grid-row-gap: 1em;
   text-align: center;
+  margin: auto;
 }
 
 .spotlight div {
@@ -231,7 +231,7 @@ footer h3 {
 
 .logo {width: 75px;}
 
-.icon {width: 40px;}
+.icon {width: 20px;}
 
 .social a img {
   padding: .3em;
@@ -239,23 +239,24 @@ footer h3 {
 
 .hero {
   display: grid;
-  grid: 1fr 1fr / 1fr 1fr;
-  position: relative;
-  min-width: 200px;
+  grid: 1fr;
+  min-width: 100px;
+  margin: 0px;
+  padding: 2rem;
+  
 }
 
 .hero .hero-photo {
   grid-column: 2/3;
   grid-row: 1/3;
-  margin: 10px;
-  position: relative; 
-  min-width: 200px; 
+  margin: 20px;
+  min-width: 100px; 
 }
 
 .hero-photo img {
-  width: 90%;
+  width: 100%;
   height: 100%;
-  float: left;
+  
 }
 
 h2 {
