--- a/chamber/css/large.css
+++ b/chamber/css/large.css
@@ -1,7 +1,8 @@
-@media only screen and (min-width: 1200px) {
+@media only screen and (min-width: 37em) {
 	header{
         font-size: 1rem;
 		grid-template-columns: 1fr 2fr 1fr;
+		grid-column-gap: .9rem;
     }
 
 	nav {
@@ -9,7 +10,6 @@
 		grid-row: 1/2;
 	}
 
-	
 	.banner {
 		grid-row: 3/3;
 		grid-column: 1/5;
@@ -38,7 +38,6 @@
 		padding-left: 5px;
 		justify-self: start;
 	}
-
 
 	h2 {
 		grid-column: 2/3;
@@ -122,8 +121,7 @@
 	.spotlight {
 		display: grid;
 		grid-row: 1/4;
-		grid-template-columns: minmax(min-content, max-content);
-		
+		grid-template-columns: minmax(min-content, max-content);	
 	}
 
 	.spotlight h3 {
@@ -175,7 +173,6 @@
 		font-size: smaller;
     }    
 
-
 	.information {
 		grid-column: 2/3;
 		grid-row: 1/2;
@@ -185,5 +182,12 @@
 	footer {
 		text-align: center;
 	}
+
+	/***Join***/
+	
+	.fillout-form {
+		display: grid;
+		grid-template-columns: repeat(2, 1fr);
+	  }
 }
 
