--- a/chamber/css/large.css
+++ b/chamber/css/large.css
@@ -162,12 +162,6 @@
 
     .menu {display: none;}
 
-	.discover-main {
-		display: grid;
-		grid-template-rows: minmax(min-content, max-content);
-		grid-template-columns: minmax(min-content, max-content);
-	}
-
 	.description {
         display: block;
 		font-size: smaller;
@@ -182,6 +176,10 @@
 	footer {
 		text-align: center;
 	}
+
+	/*****Discover****/
+	
+
 
 	/***Join***/
 	
