--- a/chamber/css/small.css
+++ b/chamber/css/small.css
@@ -299,6 +299,7 @@ main section {
 .image-discover {
   float: left;
   margin-right: 35px;
+  width: 100%;
 }
 
 .discover img[data-src] {
@@ -448,3 +449,99 @@ main section.membership {
   font-size: 25px;
 }
 
+/**********************
+    Directory Page
+**********************/
+
+.directory {
+  text-align: center;
+  border: 8px var(--darksecondary) dashed;
+}
+
+.list-view img, .card-view>section h3 {display: none;}
+
+.card-view img{
+  display: block;
+  width: 70%;
+  margin: .5rem auto;
+  min-height: 200px;
+}
+
+.list-view>section h3 {display: block;}
+
+.list-view section {
+  display: grid;
+  grid-template-columns: 1fr;
+  padding: .5em;
+}
+
+.list-view section p, .card-view section p {
+  font-weight: 500;
+}
+
+.card-view {
+  display: grid;
+  grid-template-columns: 1fr;
+}
+
+.card-view section {
+  padding: .5em;
+  margin: .5em;
+  display: grid;
+}
+
+.card-view section p {
+  align-self: end;
+}
+
+.list-view-btn {
+  padding: .5em;
+}
+
+.list-view-btn button {
+  padding:.2rem;
+  background-color: white;
+  border: 3px #BF6F7E solid;
+  border-radius: 5px;
+  margin: .3em;
+}
+
+.list-view section:nth-child(2n) {
+  background-color:#BF6F7E40;
+}
+
+
+.contact-main {
+  display:grid;
+  justify-items: center;
+}
+
+.contact-main .submitBtn {
+  margin-left: 2.2rem;
+}
+
+.information {
+  margin-bottom: 1rem;
+}
+
+.visit-us {
+  background-color: #355B8C;
+  color: white;
+  margin-top: .5rem;
+  padding: .5rem 1rem;
+  border-radius: 5px;
+  max-height: 300px;
+}
+
+.visit-us h3, .contact-point h3 {
+  font-size: x-large;
+}
+
+.contact-point {
+  background-color: #011640;
+  color: white;
+  margin-top: .5rem;
+  padding: .5rem 1rem;
+  border-radius: 5px;
+  max-height: 300px;
+}
