--- a/chamber/css/small.css
+++ b/chamber/css/small.css
@@ -298,7 +298,7 @@ main section {
 
 .image-discover {
   float: left;
-  margin-right: 35px;
+  margin-right: 25px;
   width: 100%;
 }
 
@@ -452,6 +452,10 @@ main section.membership {
 /**********************
     Directory Page
 **********************/
+.business {
+  text-align: center;
+  color:var(--darkprimary);
+}
 
 .directory {
   text-align: center;
@@ -462,36 +466,32 @@ main section.membership {
 
 .card-view img{
   display: block;
-  width: 70%;
-  margin: .5rem auto;
+  padding: 15px;
+  width: 50%;
+  margin: 0 auto;
   min-height: 200px;
 }
 
-.list-view>section h3 {display: block;}
+.list-view>section h3 {display: block;
+  text-align: center;
+  font-size: 25px;}
 
 .list-view section {
-  display: grid;
   grid-template-columns: 1fr;
   padding: .5em;
+  color: #113103;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 .list-view section p, .card-view section p {
-  font-weight: 500;
+  font-size: 20px;
+  color:#113103;
+  text-align: center;
 }
 
 .card-view {
   display: grid;
   grid-template-columns: 1fr;
-}
-
-.card-view section {
-  padding: .5em;
-  margin: .5em;
-  display: grid;
-}
-
-.card-view section p {
-  align-self: end;
 }
 
 .list-view-btn {
@@ -500,16 +500,14 @@ main section.membership {
 
 .list-view-btn button {
   padding:.2rem;
-  background-color: white;
-  border: 3px #BF6F7E solid;
+  background-color: var(--secondary);
   border-radius: 5px;
   margin: .3em;
 }
 
 .list-view section:nth-child(2n) {
-  background-color:#BF6F7E40;
+  background-color: var(--secondary);
 }
-
 
 .contact-main {
   display:grid;
@@ -535,6 +533,7 @@ main section.membership {
 
 .visit-us h3, .contact-point h3 {
   font-size: x-large;
+
 }
 
 .contact-point {
