--- a/chamber/css/small.css
+++ b/chamber/css/small.css
@@ -124,12 +124,21 @@ main {
 }
 
 h2 {
-  color: var(--gray);
+  grid-column: 2/3;
+  grid-row: 1/3;
+  position: relative;
+  color: var(--darksecondary);
   background-color: var(--secondary);
-  font-size: xx-large;
-  text-align: center;
-  padding: 2rem;
-  margin:0;
+  width: 118px;
+  height: 12% ;
+  margin: 0 0 0.5rem;
+	top: 25px;
+	left: 30px;
+	background: radial-gradient(rgb(252, 252, 252), #F4B552);
+	border: 1px solid rgba(0,0,0,.1);
+	padding: 1.5rem;
+	box-shadow: 0 0 30px #333;
+	opacity: 0.8;
 }
 
 main section {background-color: var(--gray);}
@@ -248,23 +257,6 @@ footer h3 {
   height: 100%;
 }
 
-h2 {
-  grid-column: 2/3;
-  grid-row: 1/3;
-  position: relative;
-  color: var(--darksecondary);
-  background-color: var(--secondary);
-  width: 50%;
-  height: 50% ;
-  margin: 0 0 0.5rem;
-	top: 25px;
-	right: 30px;
-	background: radial-gradient(rgb(252, 252, 252), #F4B552);
-	border: 1px solid rgba(0,0,0,.1);
-	padding: 1.5rem;
-	box-shadow: 0 0 30px #333;
-	opacity: 0.8;
-}
 
 #current-temp {
   padding-left: 20px;
@@ -327,6 +319,10 @@ form fieldset {
   display: grid;
 }
 
+.form-title{
+  text-align: center;
+}
+
 form legend {
   color: var(--darkprimary);
   margin: 0.1rem;
@@ -335,10 +331,12 @@ form legend {
 }
 
 form label.top, form div {
-  display: block;
   padding-top: 1rem;
   color: var(--darkprimary);
-  font-size: 1rem;
+  font-size: 1rem; 
+  width: 70%;
+  margin: auto;
+  
 }
 
 form label.top input, form textarea.top {
@@ -348,15 +346,17 @@ form label.top input, form textarea.top {
   border-radius: 4px;
   padding: .75rem;
   color: var(--darksecondary);
-  width: 100%;
-  max-width: 20rem;
   background-color: rgb(232, 232, 232);
+  width: 70%;
+  margin: auto;
 }
 
 form label.sbs {
   display: block;
-  padding: .75rem 0;
+  padding: 1rem 0;
   color: var(--darkprimary);
+  width: 70%;
+  margin: auto;
 }
 
 form input.submitBtn {
@@ -372,11 +372,11 @@ form input.submitBtn {
 }
 
 form label.top input:required {
-  border-left: var(--secondary) solid 6px;
+  border-left: red solid 6px;
 }
 
 form label.top input:required:valid {
-  border-left: var(--gray) solid 6px;
+  border-left: var(--secondary) solid 6px;
 
 }
 
@@ -408,7 +408,7 @@ main section.membership {
 }
 
 .membership2 {
-  background-color: orange;
+  background-color: #cd7f32;
   font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
   font-size: 18px;
   color: var(--darkprimary);
@@ -416,7 +416,7 @@ main section.membership {
 }
 
 .membership3 {
-  background-color: rgb(188, 206, 206);
+  background-color: #c0c0c0;
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
   font-size: 18px;
   color: var(--darkprimary);
@@ -424,7 +424,7 @@ main section.membership {
 }
 
 .membership4 {
-  background-color: yellow;
+  background-color: #ffd700;
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
   font-size: 18px;
   color: var(--darkprimary);
@@ -438,6 +438,12 @@ main section.membership {
 .price {
   font-size: 35px;
 }
+
+.join-us {
+  text-align: center;
+  font-size: 25px;
+}
+
 
 /*******Thank You**********/
 .thanks {
