--- a/lesson9/prophets.css
+++ b/lesson9/prophets.css
@@ -14,12 +14,10 @@ h1 {
 
 .cards {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+    grid-template-columns: repeat(minmax(200px, 1fr));
 }
 
 .cards section {
-    margin: 1em;
-    padding: 1.5em;
     background-color: #90A955;
     color: #132A13;
     box-shadow: 10px 5px 5px gray;
@@ -47,7 +45,7 @@ footer {
 
 @media(min-width: 600px) {
     .cards {
-        grid-template-columns: repeat(2, 1fr);
+        grid-template-columns: repeat( 2, 1fr);
     }
     
 @media(min-width: 920px) {
