--- a/chamber/css/small.css
+++ b/chamber/css/small.css
@@ -92,6 +92,7 @@ color: var(--darkprimary);
 transition: 0.2s;
 font-size: x-large;
 font-family: Arial, Helvetica, sans-serif;
+
 }
 
 nav ul li.active a, .navigation a:hover {background-color: var(--gray);
@@ -146,9 +147,10 @@ main section {background-color: var(--gray);}
 main section h4, main section p {font-weight: lighter;}
 
 main section p a {
-  color: var(--gray);
+  color: var(--darkprimary);
   font-weight: normal;
   padding: 0 .25em;
+
 }
 
 main section p a:hover {color: var(--gray);}
