--- a/chamber/css/small.css
+++ b/chamber/css/small.css
@@ -297,7 +297,7 @@ Discover
 *******/
 main section {
   text-align: center;
-  background-color: var(--gray);
+  background-color: rgb(81, 116, 84);
   margin: 10px;
 }
 
@@ -326,6 +326,69 @@ main section {
 
 discover-main, p {
   text-align: center;
+}
+
+/****Directory****/
+h1.business{
+  text-align: center;
+  color: var(--darkprimary);
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+.directory {
+    text-align: center;
+    border: 4px var(--darksecondary) solid;
+}
+
+.list-view img, .card-view>section h3 {display: none;}
+
+.card-view img{
+  display: block;
+  width: 50%;
+  margin: .5rem auto;
+  min-height: 250px;
+}
+.list-view>section h3 {display: block;}
+
+.list-view section {
+    grid-template-columns: 1fr;
+    padding: .5em;
+    color: var(--darkprimary);
+}
+
+.list-view section p, .card-view section p {
+    font-weight: 500;
+    color: var(--darkprimary);
+}
+
+.card-view {
+    display: grid;
+    grid-template-columns: 1fr;
+}
+
+.card-view section {
+    padding: .5em;
+    margin: .5em;
+    display: grid;
+}
+
+.card-view section p {
+    align-self: end;
+}
+
+.list-view-btn {
+    padding: .5em;
+}
+
+.list-view-btn button {
+    padding:.2rem;
+    background-color: var(--secondary);
+    border: 3px var(--darksecondary) solid;
+    border-radius: 5px;
+    margin: .3em;
+}
+
+.list-view section:nth-child(2n) {
+    background-color: var(--secondary);
 }
 
 /*****
