--- a/chamber/css/small.css
+++ b/chamber/css/small.css
@@ -574,7 +574,7 @@ section lu p {
 }
 
 section li {
-  font-family: Georgia, 'Times New Roman', Times, serif;
+  font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
   font-size: 20px;
   list-style-type: none;
 }
