--- a/camba/css/style.css
+++ b/camba/css/style.css
@@ -20,16 +20,17 @@ html {
   }  
 
 body {
-    font-size: 20px;
+    font-size: 8px;
     background: white;
     justify-content: space-evenly;
+    padding: 1em;
 }
 
   .hero {
     background-image: url(../images/law.png);
     background-repeat: no-repeat center;
     background-size: cover;
-    height: 500px;
+    height: 280px;
     position: relative;
     padding: 1rem;
 }
@@ -43,11 +44,11 @@ h1 {
 
 h2 {
     font-family: var(--fuenteHeading);
-    font-size: 50px; 
+    font-size: 20px; 
     color: var(--oscuro);
-    margin-left: 50px; 
-    margin-bottom: 50px;
-    padding-top: 15rem;
+    margin-left: 13px; 
+    margin-bottom: 20px;
+    padding-top: 5rem;
 }
 
 h3 {
@@ -81,63 +82,51 @@ p {
     flex-direction: column;
 }
 
-.date {
-    text-align: center;
-    font-family: var(--fuenteHeading);
-    color: var(--oscuro);
-    font: bold;
-}
-
 .barra-navegacion, a {
     text-align: center;
     text-decoration: none;
     font-size: 2rem;
     font-weight: 600;
     color: var(--oscuro);
-    font-size: 23px; 
-    margin-top: 80px;  
+    font-size: 15px; 
+    margin-top: 60px;  
     flex-direction: row;
     justify-content: space-evenly;   
 }
 
 /*SERVICIOS*/
 .servicios li {
-    text-align: justify;
+    text-align: left;
     list-style-type: circle;
-    padding: 3rem;
-    margin-left: 45rem;
+    padding: 2rem;
+    margin-left: 8rem;
     font-size: 2.5rem;
 }
 
 img {
     float: center; 
-    padding: 1.5rem;
+    padding: 1rem;
 }
 
 /*HEADER*/
 
 header {
     display: grid;
-    grid-template-columns: 1fr 2fr 2fr;
+    grid-template-columns: 1fr 1fr 2fr;
 }
 
 .talento {
     text-align: justify;
-    margin: 60px;
+    margin: auto;
 }
 
 .top-logo {
-    width: 190px;
-    height: 200px;
-    margin-left: 35rem;
-    padding-top: 4rem;
+    width: 110px;
+    height: 105px;
+    margin-left: 3rem;
+    padding-top: 1rem;
 }
 
-.icon {
-    width: 60px;
-    height: 60px;
-    margin-left: 1rem;
-}
 
 /*NUESTRO TALENTO*/
 .talento {
@@ -149,8 +138,8 @@ header {
 
 .foto {
     float: left;
-    margin-right: 25px;
-    width: 35rem;
+    margin-right: 15px;
+    width: 32rem;
     height: 44rem;
 }
 
@@ -167,50 +156,58 @@ footer {
 }
 
 .bottom-logo {
-    width: 200px;
     height: 190px;
     float: left;
-    margin-right: 20px;
-    padding-top: 5rem;
-    margin-left: 180px;
+    margin-right: 5px;
+    padding-top: 3rem;
 }   
 
 .contact {
     float: right;
-    margin-left: 250px;
-    font-size: 17px;
+    margin-left: 30px;
+    font-size: 10px;
 }
 
 .footer-info {
     text-align: center;
-    font-size: 15px;
+    font-size: 5px;
 }
 
 .abogados-titulo {
     text-align: center;
-    padding: 2rem;
+    padding: 1rem;
+    font-size: 15px;
 }
 
 .address {
     text-align: justify;
+    font-size: 18px;
 }
+
+.icon {
+    width: 40px;
+    height: 40px;
+    margin-left: .1rem;
+}
+
 
 /*CONTACT US*/
 .contacto {
     text-align: justify;
     margin-right: 7rem;
-    margin-left: 7rem;
-    margin-bottom: 15rem;    
+    margin-left: 3rem;
+    margin-bottom: 10rem;    
 }
 
 .contacto__titulo {
     text-align: center;
-    padding: 5rem;
+    padding: 1rem;
+    font-size: 40px;
 }
 
 .bloques {
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns: 1fr;
     gap: 1rem;
     margin: auto;
     text-align: center;
