--- a/camba/css/large.css
+++ b/camba/css/large.css
@@ -56,23 +56,24 @@
     }
     
     /*barra Nav*/
-    .barra-navegacion {
-        display: flex;
-        flex-direction: column;
-    }
-    
-    .barra-navegacion, a {
+    .barra-navegacion a {
+        display: block;
+        padding: 2rem;
         text-align: center;
         text-decoration: none;
-        font-size: 2rem;
-        font-weight: 600;
         color: var(--oscuro);
-        font-size: 23px; 
-        margin-top: 80px;  
-        flex-direction: row;
-        justify-content: space-evenly;   
+        font-weight: 700;
+        transition: 0.5s;
+        font-size: 20px;
+        margin-bottom: 5px;
+        margin-top: 110px;
     }
     
+    .barra-navegacion a:hover {
+        color: var(--secundario);
+        background-color: var(--oscuro);
+    }
+
     /*SERVICIOS*/
     .servicios li {
         text-align: justify;
@@ -103,7 +104,7 @@
         width: 190px;
         height: 200px;
         margin-left: 35rem;
-        padding-top: 4rem;
+        padding-top: 2rem;
     }
     
     .icon {
